<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NeuroscienceActivity!</string>
    <string name="app_name">Neuroscience</string>
    <string name="enter">Enter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_neuroscience">Neuroscience</string>
    <string name="background">background image</string>
    <string name="brain">brain image</string>
    <string name="title_activity_wakeup">WakeupActivity</string>
    <string name="title_activity_nighttime">NighttimeActivity</string>
    <string name="title_activity_morning">MorningActivity</string>
    <string name="password">1234</string>
    <string name="head_down_img">image of person with head downimage of person with head downimage of person with head down</string>
    <string name="head_down_text">Close your eyes and put your head down.</string>
    <string name="media_management_service">Media Management Service</string>
    <string name="headphone_icon">headphone icon</string>
    <string name="password_input" />
    <string name="password_textbox">password textbox</string>
    <string name="input_password">Input password</string>
    <string name="title_activity_layar">LayarActivity</string>
    <string name="launch_layar">Tap the home button and launch Layar app</string>
    <string name="proceed_to_walking_button">start walking!</string>
    <string name="start_walking_icon">start walking icon</string>
    <string name="title_activity_walking">WalkingActivity</string>
    <string name="actively_walking">Walk around the room and listen to the audio.</string>
    <string name="pilot_date">27 June  2012</string>
    <string name="version_num">Version 1.0</string>
    <string name="android_version_num">Android OS 3.2</string>
    <string name="main_brain">Selected brain image</string>
	<string name="yes_button">Yes</string>
	<string name="no_button">No</string>
	<string name="end_quest">End your walk!</string>
	<string name="play_button">Play</string>
	<string name="pause_button">Pause</string>
	<string name="restart_button">Restart</string>
	<string name="quest_done">Done!</string>
	<string name="preference_file_key">com.wgen.curriculum.prototype.neuroscience.PREFERENCES_FILE_KEY</string>
	<string name="character_brain_id">com.wgen.curriculum.prototype.neuroscience.character_brain_id</string>
	<string name="neuroscience_progress">com.wgen.curriculum.prototype.neuroscience.neuroscience_progress</string>
	<string name="proceed_to_walking_text">After you have experienced Layar, press button to proceed</string>
	<string name="alarm_stop_button">Stop Alarm</string>
	<string name="button_to_layar">Next</string>
	<string name="layar_icon">layar icon</string>
	<string name="brain_selected_descrip">Is this the brain you want?</string>
</resources>