<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageViewBkg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/actively_walking"
        android:src="@drawable/neuro_walking_bkg" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="143dp"
        android:layout_marginLeft="554dp"
        android:onClick="onRestartSound"
        android:text="@string/restart_button" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/restart_button"
        android:layout_alignBottom="@+id/restart_button"
        android:layout_toRightOf="@+id/restart_button"
        android:onClick="onTogglePlay"
        android:text="@string/pause_button" />

    <Button
        android:id="@+id/end_quest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/restart_button"
        android:layout_alignRight="@+id/play_button"
        android:layout_below="@+id/play_button"
        android:onClick="onEndQuest"
        android:text="@string/end_quest"
        android:visibility="invisible" 
        />

    <TextView
        android:id="@+id/textViewDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/quest_done"
        android:textSize="100sp"
        android:visibility="invisible"
        />

</RelativeLayout>
