<?xml version="1.0" encoding="utf-8"?> 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splashscreen_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/prototype_splash_screen"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/app_name"
        android:textColor="#DAA520"
        android:textSize="60dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/android_version_num"
        android:textColor="#DAA520"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="192dp"
        android:text="@string/version_num"
        android:textColor="#DAA520"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginTop="48dp"
        android:text="@string/pilot_date"
        android:textColor="#DAA520"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signin_enter_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/enter"
        android:textColor="#0000FF" />

</RelativeLayout>
